Fixed: changed Navigation position from absolute to fixed, to fix an overflow problem

--- a/src/styles/components/NavigationStyles.scss
+++ b/src/styles/components/NavigationStyles.scss
@@ -1,7 +1,8 @@
 .Navigation {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #fff;
   width: 100vw;
+  z-index: 1000;
 }
